force-app/main/default/objects/Grant__c/Grant__c.object-meta.xml
<CustomObject>
    <description>Represents the financial grants, deals, and agreements established between the EERE and small businesses, providing structured data to track funding amounts, timelines, and compliance status. It enables efficient management and analysis of funding allocations to ensure they align with the program&apos;s goals.</description>
    <label>Grant</label>
    <nameField>
        <label>Grant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>