force-app/main/default/objects/Grant__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The amount of funding allocated for this particular grant, deal, or agreement.</description>
    <label>Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>