force-app/main/default/objects/Grant__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>The small business account provides the specified product or service within the EERE program, ensuring a direct link between the offering and the business.</description>
    <inlineHelpText>Select the small business account that offers this product or service. This connection helps maintain accurate data on which businesses are contributing specific offerings to the EERE program.</inlineHelpText>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grants</relationshipLabel>
    <relationshipName>Grants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>