force-app/main/default/objects/Grant__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The ending date when the grant, deal, or agreement is set to expire, indicating the end of its funding or operational timeline.</description>
    <inlineHelpText>Enter the date on which this grant, deal, or agreement ends. This marks the official conclusion of funding or services.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>