force-app/main/default/objects/Grant__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <description>Establishes a link between the grant, deal, or agreement and the specific product or service offering, enabling accurate tracking and association of funding with the appropriate offerings.</description>
    <inlineHelpText>Select the related product or service offering that this grant, deal, or agreement is associated with. This connection helps ensure proper allocation and management of funding tied to specific offerings.</inlineHelpText>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Grants</relationshipLabel>
    <relationshipName>Grants</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>