force-app/main/default/objects/Grant__c/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <description>Defines the pricing strategy used for the product or service offering, allowing the selection of different models based on standard, negotiated, or service-based pricing.</description>
    <inlineHelpText>Select the pricing model that best applies to this offering. Standard pricing uses default rates, negotiated pricing is for custom deals, and service-based pricing applies to complex services where standard units don&apos;t apply.</inlineHelpText>
    <label>Pricing Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Negotiated</fullName>
            </value>
            <value>
                <fullName>Service-Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>