force-app/main/default/objects/Grant__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The starting date when the grant, deal, or agreement becomes active, indicating the beginning of its funding or operational timeline.</description>
    <inlineHelpText>Enter the date on which this grant, deal, or agreement starts. This marks the official beginning of funding or services.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>